# SF.ViewerH

./: .gitignore  README.md  app-new-2.py  app-new.py  app.py  app_old.py  config.toml  config_default.toml  pyproject.toml  requirements.txt  settingsUI.py
backend/: base_config.py  classes.py  cmdargs.py  config.py  dep.py  downloader.py  extra.py  filesession.py  init.py  logger.py  logger_new.py  main_import.py  modules.py  parser.py  patt.json  project.json  projects.py  search.py  settings.py  utils.py  v_info.json  validators.py
backend/classes/: __init__.py  db.py  db_old.py  downloader.py  dsettings.py  dsettings_old.py  files.py  lib.py  projecte.py  projecte_old.py  templates.py  templates_old.py
backend/db/: __init__.py  classes.py  connect.py  metadata.py  pool_variants.py  project.py
backend/downloaders/: downloader.py  error.py  gallerydl.py  nhentai.py
backend/editor/: eutils.py  item_editor.py  selector.py  tag_editor.py  variants_editor.py
backend/main_import/: main.py  second.py
backend/main_import_old/: __init__.py
backend/modules/: filesession.py  logger.py
backend/pools/: variants.py
backend/processors/: __init__.py  gallery-dl-hitomila.py  gallery-dl-nhentai.py  general.py  nhentai.py  none.py
backend/projects/: __init__.py  (+5 more)
data/: aliases.json
extention/: downloader-chrome.crx
routers/: extra.py  main.py
static/: styles.css  styles_detailview.css  styles_edit_window.css  styles_index.css  styles_items.css  styles_reader.css
templates/: detailview.html  edit_window.html  header.html  index.html  items.html  reader.html
(+46 files in other folders)
